upgrade jzbar to v0.3.1 to fix library load from application image